--- a/index.html
+++ b/index.html
@@ -54,18 +54,28 @@
             <label class="form-check-label">Abreviar</label>
           </div>
         </div>
-        <div class="div mb-3" id="numberRow">
-          <label class="form-label">Número:</label>
-          <input class="form-control" id="numberInput">
+        <div class="div mb-3" id="appServiceRow">
+          <label class="form-label">Aplicativo ou Serviço:</label>
+          <input class="form-control" id="appServiceInput">
           <div class="mt-2">
-            <input type="checkbox" class="form-check-input" id="checkNumber">
+            <input type="checkbox" class="form-check-input" id="checkAppService">
             <label class="form-check-label">Abreviar</label>
           </div>
         </div>
+        <div class="div mb-3" id="numberRow">
+          <label class="form-label">Número:</label>
+          <input class="form-control" id="numberInput">
+        </div>
         <!-- Button trigger modal -->
-        <button onclick="generateName()" type="button" class="btn btn-primary" data-bs-target="#staticBackdrop">
-          Gerar
-        </button>
+        <div class="d-flex justify-content-between">
+          <button onclick="generateName()" type="button" class="btn btn-primary" data-bs-target="#staticBackdrop">
+            Gerar
+          </button>
+          <button onclick="clearForm()" type="button" class="btn btn-danger">
+            Limpar
+          </button>
+        </div>
+        
       </div>
     </div>
     <!-- Modal -->
@@ -119,6 +129,17 @@
           </div>
         </div>
         <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="toastCopyErrorSubscription">
+          <div class="toast-header">
+            <img class="rounded me-2">
+            <strong class="me-auto"> &#128308; Erro</strong>
+            <small>just now</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            Setor ou Ambiente estão vazios, verifique!
+          </div>
+        </div>
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="toastCopyErrorResourceGroup">
           <div class="toast-header">
             <img class="rounded me-2">
             <strong class="me-auto"> &#128308; Erro</strong>
